MODBULKOPS-71 - Handle bad data gracefully